# hybar

./: .gitignore  Cargo.toml  README.md  architecture.md  config.json  todo.md
.github/workflows/: build.yml
apps/settings/src/: lib.rs
defaults/: config.json
defaults/themes/: default.css  full-dark.css  white.css
hybar-core/: Cargo.toml
hybar-core/src/: lib.rs
muelle-core/: Cargo.toml
muelle-core/src/: lib.rs
panels/: Cargo.toml
panels/calendar/: Cargo.toml
panels/calendar/src/: lib.rs
panels/player/: Cargo.toml
panels/player/src/: lib.rs
panels/settings/: Cargo.toml
panels/settings/src/: lib.rs  settings_container.rs  traits.rs
panels/src/: lib.rs
src/: bar.rs  client.rs  config.rs  hybar.rs  main.rs  style.css
src/bar/events/: mod.rs  preferences_changed.rs  reload_bar.rs  title_changed.rs  window_event.rs
src/config/: bootstrap.rs
src/enums/: mod.rs  preferences.rs  widgets.rs
src/events/: window_event.rs
src/impls/: settings.rs
src/models/: clients.rs
src/ui/: fullscreen.rs  mod.rs  sections.rs  widgets.rs  windows.rs
src/ui/widgets/: apps.rs  clock.rs  separator.rs  title.rs  workspaces.rs
src/user/: config.rs  models.rs
src/utils/: app_launch.rs  clients.rs  css.rs  mod.rs  search.rs
src/widgets/: clock.rs  workspaces.rs
widgets/clock/: Cargo.toml
