[package]
name = "hybar"
version = "0.1.0"
edition = "2024"

[dependencies]
hybar-core = { path = "hybar-core" }
panels = { path = "panels" }
parking_lot = "0.12"
gtk = { version = "0.9", package = "gtk4" }
gtk4-layer-shell = "0.5.0"
glib = "0.20.12"
chrono = "0.4.41"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1.88"
dirs-next = "2"
async-channel = "2.5.0"
include_dir = "0.7.4"
directories = "6.0.0"

[workspace]
members = ["hybar-core", "panels"]
