[package]
name = "settings"
version = "0.1.0"
edition = "2021"

[lib] # Importante: es una librería
path = "src/lib.rs"

[dependencies]
gtk = { version = "0.9", package = "gtk4" }
gtk4-layer-shell = "0.5.0"
glib = "0.20.12"
parking_lot = "0.12"
async-channel = "2.5.0"
dirs-next = "2"
directories = "6.0.0"
include_dir = "0.7.4"
